<resources>
    <string name="app_name">DatabaseApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name_">Name:</string>
    <string name="age_">Age:</string>
    <string name="breed_">Breed:</string>
    <string name="filter">Filter</string>
    <string name="choose_option">Choose option</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="breed">Breed</string>
    <string name="put_data_into_the_fields">Put data into the fields</string>
    <string name="settings">Settings</string>
    <string name="animals">Animals</string>
    <string name="add_animal">Add animal</string>
    <string name="update_animal">Update animal</string>
</resources>